--- a/html/all.html
+++ b/html/all.html
@@ -1354,6 +1354,10 @@ U+0022 <code>&amp;#34;</code>
         <span>⬄</span> U+2B04 <code>&amp;#11012;</code>
     </div>
 </div>
+<h2>Якорь</h2>
+<pre>
+    &lt;a name=&quot;a1&quot;&gt;Какой то тарегированный текст&lt;/a&gt;
+</pre>
 <h2>Form</h2>
 <h3>multipart/form-data</h3>
 <p>Данные не кодируются. Это значение применяется при отправке файлов.</p>
