--- a/nginx/all.html
+++ b/nginx/all.html
@@ -5,21 +5,94 @@ sudo service nginx start
 sudo service nginx restart
 </pre>
 <h2>Настойки</h2>
+<h3>FPM</h3>
+<p><button type="button" class="btn btn-danger" data-toggle="collapse" data-target="#collapse1"><var>/etc/php5/fpm/pool.d/forum.conf</var>:</button></p>
+<div id="collapse1" class="collapse">
+<pre>
+[forum]
+;prefix = /path/to/pools/$pool
+user = fpm
+group = fpm
+listen = /var/run/php5-fpm-forum.sock
+;listen.backlog = 65535
+listen.owner = fpm
+listen.group = fpm
+;listen.mode = 0660
+;listen.allowed_clients = 127.0.0.1
+;priority = -19
+pm = dynamic
+pm.max_children = 5
+pm.start_servers = 2
+pm.min_spare_servers = 1
+pm.max_spare_servers = 3
+;pm.process_idle_timeout = 10s;
+;pm.max_requests = 500
+;pm.status_path = /status
+;ping.path = /ping
+;ping.response = pong
+;access.log = log/$pool.access.log
+;access.format = "%R - %u %t \"%m %r%Q%q\" %s %f %{mili}d %{kilo}M %C%%"
+;slowlog = log/$pool.log.slow
+;request_slowlog_timeout = 0
+;request_terminate_timeout = 0
+;rlimit_files = 1024
+;rlimit_core = 0
+;chroot =
+chdir = /
+;catch_workers_output = yes
+;security.limit_extensions = .php .php3 .php4 .php5
+;env[HOSTNAME] = $HOSTNAME
+;env[PATH] = /usr/local/bin:/usr/bin:/bin
+;env[TMP] = /tmp
+;env[TMPDIR] = /tmp
+;env[TEMP] = /tmp
+
+env [DB_HOST] = localhost
+env [DB_PORT] = 3306
+env [DB_FORUM] = forum
+env [DB_USER] = root
+env [DB_PASS] = ...
+
+
+;php_admin_value[sendmail_path] = /usr/sbin/sendmail -t -i -f www@my.domain.com
+;php_flag[display_errors] = off
+;php_admin_value[error_log] = /var/log/fpm-php.www.log
+;php_admin_flag[log_errors] = on
+;php_admin_value[memory_limit] = 32M
+</pre>
+</div>
+
+<h3>Права пользователя из-под которого запущен nginx</h3>
+<p>Пользователь nginx должен присутствовать в группе пользователя fpm. <code class="copyToClipboard">sudo usermod -a -G fpm nginx</code></p>
 <h3>Разные версии php из-под разных пользователей для разных хостов</h3>
 <ul>
 	<li>Создаем pool в php-FPM</li>
 	<li>
-		<pre class="prettyprint lang-sh">service php5.6-fpm restart</pre>
+		<code class="copyToClipboard">sudo service php5.6-fpm restart</code>
 	</li>
 </ul>
 <h3>Передача переменных окружения через сокет (пул)</h3>
 <p><code class="prettyprint lang-sh">nano /etc/php5.6/fpm/pool.d/username.conf</code></p>
 <pre>
-env[SIGN-FORUM_DB_HOST] = localhost
-env[SIGN-FORUM_DB_PORT] = 
-env[SIGN-FORUM_DB_NAME] = ...
-env[SIGN-FORUM_DB_USER] = ...
-env[SIGN-FORUM_DB_PASS] = ...
+env[FORUM_DB_HOST] = localhost
+env[FORUM_DB_PORT] = 
+env[FORUM_DB_NAME] = ...
+env[FORUM_DB_USER] = ...
+env[FORUM_DB_PASS] = ...
+</pre>
+<h2>Редиректы</h2>
+<pre>
+server {
+	...
+	index ...
+	...
+  if ($request_uri ~* "^/index\.php(.*?)$") {
+    return 301 /$1;
+  }
+  location / {
+  	try_files $uri $uri/ =404;
+  }
+}
 </pre>
 <h2>php-fpm</h2>
 iadfeshchm@iadfeshchm-pc ~ $ sudo apt-get install php5-cli php5-common php5-mysql php5-gd php5-fpm php5-cgi php5-fpm php-pear php5-mcrypt
