--- a/linux/all.html
+++ b/linux/all.html
@@ -1,3 +1,8 @@
+что такое nat
+как работает proxy
+как преобразуется домен в ip
+как работает http протокол
+
 <h2>synaptic - менеджер пакетов</h2>
 <h2>форматирование флешки</h2>
 <p>проверим наличие нашего Flash-накопителя:</p>
