--- a/js/array/array.html
+++ b/js/array/array.html
@@ -9,6 +9,7 @@
 	</head>
 	<body>
 		<p>Привет, Мир!</p>
+		<p ondblclick="eval(this.innerHTML)">alert('hi')</p>
 		<script src="array.js"></script>
 	</body>
 </html>
