--- a/css/all.html
+++ b/css/all.html
@@ -120,3 +120,12 @@ ol{
     counter-reset:item
 }
 </pre>
+<h3>tab-size</h3>
+<pre class="prettyprint lang-css">
+pre {
+	tab-size: 4;
+}
+pre.lang-js {
+	tab-size: 2;
+}
+</pre>
