--- a/sql/all.html
+++ b/sql/all.html
@@ -1,3 +1,7 @@
+<p>чтоб при рестарте не тупил использовать хинт</p>
+<pre>set global innodb_max_dirty_pages_pct = 0;</pre>
+
+
 <h2>Типы данных</h2>
 <h3>INT</h3>
 <p><code>INT(11)</code> — сколько знаков будет при заполнении нулями (UNSIGNED). Если поле не UNSIGNED, то число ни на что не влияет, только доставляет неудобства при работе с внешними ключами. Диапазон со знаком от -2147483648 до 2147483647. Диапазон без знака от 0 до 4294967295.</p>
