--- a/php/all.html
+++ b/php/all.html
@@ -73,18 +73,26 @@ echo &quot;&lt;/pre&gt;&quot;;
 
 <h2>ООП</h2>
 <h3>Функции для работы с классами</h3>
-<h4>class_exists</h4>
+<h4>class_exists()</h4>
 <pre class="prettyprint lang-php">
 // Проверяем существование класса перед его использованием
 if (class_exists('MyClass')) {
     $myclass = new MyClass();
 }
 </pre>
-<h4>get_declared_classes</h4>
+<h4>get_declared_classes()</h4>
 <p>get_declared_classes — Возвращает массив с именами объявленных классов</p>
 <pre class="prettyprint lang-php copyToClipboard">
 echo &quot;&lt;pre&gt;&quot;;
 print_r(get_declared_classes());
+echo &quot;&lt;/pre&gt;&quot;;
+die();
+</pre>
+<h4>get_class_methods()</h4>
+<p>get_class_methods — Возвращает массив имен методов класса</p>
+<pre class="prettyprint lang-php copyToClipboard">
+echo &quot;&lt;pre&gt;&quot;;
+print_r(get_class_methods($object));
 echo &quot;&lt;/pre&gt;&quot;;
 die();
 </pre>
