--- a/semantic-ui/test.html
+++ b/semantic-ui/test.html
@@ -22,9 +22,34 @@
 <h3 class="ui center aligned header">Container</h3>
 <div class="ui container">
   <div class="ui segments">
-    <div class="ui segment">Content</div>
-    <div class="ui segment">Content</div>
-    <div class="ui segment">Content</div>
+    <div class="ui segment">
+
+<img src="/images/avatar/small/elliot.jpg" data-title="Elliot Fu" data-content="Elliot has been a member since July 2012" class="ui avatar image">
+<img src="/images/avatar/small/stevie.jpg" data-title="Stevie Feliciano" data-content="Stevie has been a member since August 2013" class="ui avatar image">
+<img src="/images/avatar/small/matt.jpg" data-title="Matt" data-content="Matt has been a member since July 2014" class="ui avatar image">
+
+
+    </div>
+    <div class="ui segment">
+
+
+<div class="ui icon button" data-content="Add users to your feed">
+  <i class="add icon"></i>
+</div>
+
+    </div>
+    <div class="ui segment">
+
+
+
+<div class="ui icon button" data-tooltip="Add users to your feed">
+  <i class="add icon"></i>
+</div>
+<div class="ui icon button" data-tooltip="Add users to your feed" data-inverted="">
+  <i class="add icon"></i>
+</div>
+
+    </div>
     <div class="ui segment">Content</div>
   </div>
 </div>
