--- a/linux/all.html
+++ b/linux/all.html
@@ -203,7 +203,7 @@ EndSection</pre> Сочетания по умолчанию лежат в фай
     <li>Размер терминала по умолчанию - сделай под себя</li>
     <li>Убрать - Включить клавишу для доступа в меню (F10 по умолчанию) - для удобной работы в терминаля с утилитой mc</li>
 </ul>
-<h3>mc midnight commander</h3>
+<h3>Midnight Commander</h3>
 <h4>установка</h4>
 <pre class="prettyprint lang-sh">
 sudo apt-get install mc
@@ -218,20 +218,17 @@ SELECTED_EDITOR="/usr/bin/subl"
 </pre>
 <h4>горячие клавиши</h4>
 <ul>
+    <li><kbd>Ctrl + O</kbd> - показать/скрыть консоль;</li>
     <li>
-        <kbd>Ctrl + O</kbd> - hide mc (show console);
+        <kbd>Shift+F4</kbd> - создания нового файла. Если вместо этого вы видите на экране "26~", то можно сделать так - F9 -> настройки -> Распознавание клавиш... -> "Функциональная 14" назначить Shift+F4;
     </li>
+    <li><kbd>F7</kbd> - поиск по файлу;</li>
+    <li><kbd>Shift + F7</kbd> - найти следующее вхождение.</li>
 </ul>
+<p>Подключить SFTP в панели: <kbd>F9</kbd> → выбрать соответствующий пункт (<kbd>↑↓</kbd>) → <kbd>Enter</kbd></p>
+<p>Отключиться в панели от соединения: <code>cd</code> <kbd>Enter</kbd></p>
 <ul>
-    <li>
-        <kbd>Shift+F4</kbd> - создания нового файла. Если вместо этого вы видите на экране "26~", то можно сделать так - F9 -> настройки -> Распознавание клавиш... -> "Функциональная 14" назначить Shift+F4;</li>
 </ul>
-<p>
-    Подключить SFTP в панели: <kbd>F9</kbd> → выбрать соответствующий пункт (<kbd>↑↓</kbd>) → <kbd>Enter</kbd>
-</p>
-<p>
-    Отключиться в панели от соединения: <code>cd</code> <kbd>Enter</kbd>
-</p>
 <h3>Shutter (PrintScreen as PicPick)</h3>
 <h4>Settings</h4>
 <ul>
