--- a/bash/all.html
+++ b/bash/all.html
@@ -362,6 +362,8 @@ screen
 screen -r
 screen -r 2398.pts-0.webtest
 </pre>
+<p>Чтобы создать screen с именем foo, используй:</p>
+<pre class="prettyprint lang-sh copyToClipboard">screen -S foo</pre>
 <p><kbd>Ctrl + A, D</kbd> - выйти из сессии</p>
 <h2>Программирование</h2>
 <h3>Пути/имена</h3>
