--- a/html/all.html
+++ b/html/all.html
@@ -1364,6 +1364,14 @@ U+0022 <code>&amp;#34;</code>
 <pre>
 &lt;form enctype=&quot;application/x-www-form-urlencoded | multipart/form-data | text/plain&quot;&gt;
 </pre>
+<h3>Фильтр типов файлов в input type file</h3>
+<pre>
+&lt;input type=&quot;file&quot; name=&quot;img&quot; accept=&quot;image/jpeg,image/png,image/gif&quot;&gt;
+&lt;input type=&quot;file&quot; accept=&quot;image/*&quot;&gt;
+&lt;input type=&quot;file&quot; accept=&quot;video/*&quot;&gt;
+&lt;input type=&quot;file&quot; accept=&quot;audio/*&quot;&gt;
+</pre>
+
 
 <h2>Подключение скрипта</h2>
 <pre class="prettyprint lang-html">
