--- a/sublime-text-3/all.html
+++ b/sublime-text-3/all.html
@@ -153,6 +153,12 @@
 <h3>Tag</h3>
 <p> — закрывать тэг по /, отступы (автоматическая расстановка отступов просто ужасная)
     <del>использую</del> из-за отличной работы с атрибутами тегов;</p>
+<p><a href="https://github.com/titoBouzout/Tag">https://github.com/titoBouzout/Tag</a></p>
+<p>скачайте или склонируйте содержимое из этого репозитория в папку с названием пакета в дерикторию Packages саблайм</p>
+<pre class="prettyprint lang-sh copyToClipboard">cd ~/.config/sublime-text-3/Packages
+git clone https://github.com/titoBouzout/Tag.git
+
+</pre>
 <h3><strong>View In Browser</strong></h3>
 <p> — открыть файл в браузере;</p>
 <p>Настройка проекта</p>
