--- a/md-syntax/all.html
+++ b/md-syntax/all.html
@@ -1,5 +1,6 @@
 <h2>Markdown</h2>
 <p><q>Markdown Preview</q> - плагин sublime text для просмотра и конвертации.</p>
+
 <h2>Заголовки</h2>
 <pre>
 Заголовок первого уровня
@@ -11,4 +12,19 @@
 # Заголовок первого уровня
 ### Заголовок третьего уровня
 ###### Заголовок шестого уровня
+</pre>
+
+<h2>Код</h2>
+<pre>
+`cd ..`
+
+```javascript
+var s = &quot;JavaScript syntax highlighting&quot;;
+alert(s);
+```
+
+```php
+$s = &quot;Python syntax highlighting&quot;;
+echo s;
+```
 </pre>
