--- a/composer/all.html
+++ b/composer/all.html
@@ -36,10 +36,12 @@ sudo mv composer.phar /usr/bin/composer
 composer global require "fxp/composer-asset-plugin:~1.1.1"</pre>
 
 <h2>Использование</h2>
-<p>Собственно чтобы использовать пакеты затянутые Composer, необходимо подключить файл <var>autoload.php</var> <code>require_once "vendor/autoload.php";</code>.</p>
+<p>Собственно чтобы использовать пакеты затянутые Composer, необходимо подключить файл <var>autoload.php</var> <code class="prettyprint lang-sh copyToClipboard">require_once "vendor/autoload.php";</code>.</p>
 <h3>Команды</h3>
 <h4>show</h4>
-<p><code>composer show zlatov/sql</code> - информация об установленном пакете</p>
+<p><code class="prettyprint lang-sh copyToClipboard">composer validate</code> - проверить composer.json</p>
+<p><code class="prettyprint lang-sh copyToClipboard">composer show zlatov/sql</code> - информация об установленном пакете</p>
+<p><code class="prettyprint lang-sh copyToClipboard">composer require zlatov/tree</code> - подключить пакет</p>
 <h3>Install или Update?</h3>
 <p>Запуск composer install сделает следующее:</p>
 <ul>
@@ -88,4 +90,22 @@ composer global require "fxp/composer-asset-plugin:~1.1.1"</pre>
 <pre>composer require twbs/bootstrap
 composer require twbs/bootstrap:3.3.5
 composer require zlatov/sql:dev-master (если пакет в разработке - без версий)
+</pre>
+<h3>Версионность</h3>
+<ul>
+    <li><code>1.2.3</code> - точное соответствие</li>
+    <li><code>&lt;1.2.3</code> - с операторами сравнения</li>
+    <li><code>>1.2.3 &lt;1.3</code> - комбинации операторов</li>
+    <li><code>1.2.*</code> - последняя доступная (1.2.34, но не 1.3.0, <code>1.*</code> - 1.23.4, но не 2.0.0)</li>
+    <li><code>~1.2.3</code> - без новых функциональных возможностей (1.2.34, но не 1.3.0)</li>
+    <li><code>^1.2.3</code> - опасаться критических изменений (1.3.45, но не 2.0.0)</li>
+</ul>
+
+<p>Если необходимо использовать самый последний комит ветки, то в <var>composer.json</var> нужно указать версию <code>dev-branch</code>, например:</p>
+<pre class="prettyprint lang-js">
+{
+    "require": {
+        "author/package": "dev-master"
+    }
+}
 </pre>
