--- a/css/all.html
+++ b/css/all.html
@@ -97,6 +97,9 @@ span:nth-child(2n-3) {
 	white-space: nowrap;
 }
 </pre>
+<h3>Пренос длинных слов</h3>
+<pre class="prettyprint lang-css copyToClipboard">word-wrap: break-word;</pre>
+<p>Свойство <var>word-wrap</var> указывает, переносить или нет длинные слова, которые не помещаются по ширине в заданную область.</p>
 <h3>Предотвращает события мыши и щелчки по элементу</h3>
 <pre class="prettyprint lang-css">
 	.class {
