--- a/windows/all.html
+++ b/windows/all.html
@@ -1,3 +1,9 @@
 <h2>Настройка</h2>
 <h3>Изменение языка ввода на экране приветствия Windows 7</h3>
-<p><kbd>Панель управления</kbd> &rarr; <kbd>Часы, язык и регион</kbd> &rarr; <kbd>Язык и региональные стандарты</kbd> &rarr; <kbd>Дополнительно</kbd> &rarr; <kbd>Копировать параметры</kbd></p>
+<ol>
+	<li><kbd>Панель управления</kbd> &rarr; <kbd>Часы, язык и регион</kbd> &rarr; <kbd>Изменить язык интерфейса</kbd> &rarr; <kbd>Язык и клавиатуры</kbd> &rarr; <kbd>Изменить клавиатуру</kbd> &rarr; <kbd>Язык ввода по умолчанию</kbd> (выбираем желаемый язык по умолчанию)</li>
+	<li><kbd>Панель управления</kbd> &rarr; <kbd>Часы, язык и регион</kbd> &rarr; <kbd>Язык и региональные стандарты</kbd> &rarr; <kbd>Дополнительно</kbd> &rarr; <kbd>Копировать параметры</kbd> (ставим галки чтобы сопировать язык по умолчанию остальным)</li>
+</ol>
+<h3>RDP, Подключение к удаленному рабочему столу</h3>
+<p><kbd>Пуск</kbd> &rarr; <kbd>Все программы</kbd> &rarr; <kbd>Стандартные</kbd> &rarr; <kbd>Подключение к удаленному рабочему столу</kbd>, Компьютер: <code>&lt;mydomain&gt;.ddns.net:&lt;myport&gt;</code></p>
+
