--- a/yii2/all.html
+++ b/yii2/all.html
@@ -1,6 +1,6 @@
 <h2>Установка</h2>
-<p><code>composer create-project --prefer-dist yiisoft/yii2-app-advanced ./</code></p>
-<p><code>composer create-project --prefer-dist yiisoft/yii2-app-basic ./</code></p>
+<p><code class="copyToClipboard">composer create-project --prefer-dist yiisoft/yii2-app-advanced ./</code></p>
+<p><code class="copyToClipboard">composer create-project --prefer-dist yiisoft/yii2-app-basic ./</code></p>
 <p>Затем только <code>git init</code>, <code>git remote add...</code></p>
 <h2>Первичная настройка</h2>
 <h3>ЧПУ</h3>
